# veranda-client

./: .gitmodules  beacon-listener.py  beacon-listener.service  veranda.sh  verandarc.dist
athena/: adafruit-circuitpython-Seeed_XIAO_nRF52840_Sense-en_GB-9.2.4.uf2  athena-v0.0.py  athena-v0.1.py  athena-v0.2.py  athena-v0.3.py  athena.py  bletests.py  ec200a.py  timer-ninenano.py  timer-v0.2-seeed.py  timer.py
athena/lib/: ble.py  dcim.py  ec200a-v0.1.py  ec200a.py  ov5640.py
athena/rust/: Cargo.toml  Makefile  build.rs  espflash.toml  partitions.csv  sdkconfig.defaults
athena/rust/.cargo/: config.toml
athena/rust/src/: board.rs  camera.rs  dcim.rs  main.rs  modem.rs  ota.rs  power.rs  quectel.old.rs  quectel.rs  simcom.rs  wifi.old.rs  wifi.rs
athena/timer/: .gitignore  Makefile  go.sum  main.go  timer.elf
athena/timer/nicenano/: Makefile  go.mod  ina3221.go  main.go  timer.uf2
athena/timer/xiao-ble/: main.go  timer.uf2
