[package]
name = "athena"
version = "2.4.0"
edition = "2021"
resolver = "2"

[dependencies]
esp-idf-hal = "*"
esp-idf-sys = { version = "*", features = ["binstart", "native"] }
esp-idf-svc = "*"
embedded-svc = "*"
embedded-hal = "*"
anyhow = "*"
log = "*"
esp-camera-rs = { path = "esp-camera-rs" }
#esp-camera-rs = { git = "https://github.com/hnz1102/esp-camera-rs" }

heapless = "*"
ina3221 = "0.4.5"
sha2 = "0.10.9"

[build-dependencies]
embuild = "*"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[[bin]]
name = "athena"
harness = false

[package.metadata.esp-idf-sys]
# This will automatically generate UF2 after build
extra_components = [
    { name = "esp_tinyuf2", git = "https://github.com/espressif/esp-iot-solution.git", path = "components/usb/esp_tinyuf2" }
]


#[env]
#lib_deps = "esp32-camera"

#[[package.metadata.esp-idf-sys.extra_components]]
#remote_component = { name = "espressif/esp32-camera", version = "2.1.0" }
#bindings_header = "bindings.h"
#bindings_module = "camera"


[package.metadata.espflash]
partition_table = "partitions.csv"

[features]
default = []
board-xiao  = []
board-wroom = []
modem-simcom = []
modem-quectel = []
modem-wifi = []
